0.02
 - Add Map::Tube::GraphViz, Map::Tube::Text::Table,
   Map::Tube::Dnipropetrovsk, Map::Tube::Kazan, Map::Tube::Novosibirsk,
   Map::Tube::Prague, Map::Tube::SaintPetersburg, Map::Tube::Tbilisi,
   Map::Tube::Vienna and Map::Tube::Yekaterinburg> to SEE ALSO section in
   doc.
 - Add get_lines() method to doc.
 - Add get_stations() method to doc.
 - Remove executable bit from bucharest-map.xml file.

0.01 2014-12-10T01:21:14+01:00
 - First version