@@ -2,6 +2,8 @@ Bucharest.pm
 Changes
 examples/ex1.pl
 examples/ex2.pl
+examples/ex3.pl
+images/ex3.png
 inc/Module/Install.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
