@@ -1,4 +1,5 @@
 0.02
+ - Add EXAMPLE3 section to doc.
  - Add Map::Tube::GraphViz, Map::Tube::Text::Table,
    Map::Tube::Dnipropetrovsk, Map::Tube::Kazan, Map::Tube::Novosibirsk,
    Map::Tube::Prague, Map::Tube::SaintPetersburg, Map::Tube::Tbilisi,
